# MissionPlannerNg

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  PLAN.md  README.md  flake.nix  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  sitl-mission.yml
apps/desktop/: index.html  package.json
apps/desktop/src/: App.tsx  app.css  mission.ts  param-metadata.ts  styles.css  telemetry.ts
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/capabilities/: default.json  mobile.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: ArmSlider.tsx  BottomNav.tsx  ConfigPanel.tsx  FlightPanel.tsx  MissionMap.tsx  MissionPanel.tsx  MissionTable.tsx  PlannerPanel.tsx  PlannerToolbar.tsx  SettingsPanel.tsx  Sidebar.tsx  TelemetryPanel.tsx  TopBar.tsx
apps/desktop/src/components/hud/: ArtificialHorizon.tsx  HudPanel.tsx  TapeGauge.tsx  hud.css
apps/desktop/src/components/ui/: button.tsx  dropdown-menu.tsx  tooltip.tsx
apps/desktop/src/hooks/: use-breakpoint.ts  use-vehicle.ts
apps/desktop/src/lib/: mav-commands.ts
crates/mavkit/: Cargo.toml
crates/mavkit/src/: command.rs  event_loop.rs  lib.rs  state.rs  vehicle.rs
crates/mavkit/src/params/: mod.rs  types.rs
crates/mp-mission-core/: Cargo.toml
crates/mp-mission-core/src/: lib.rs  transfer.rs
crates/mp-telemetry-core/: Cargo.toml
crates/mp-telemetry-core/src/: lib.rs  modes.rs
crates/mp-telemetry-core/tests/: sitl_roundtrip.rs
scripts/: sitl_wait_tcp.py  sitl_wait_udp.py
src/: App.tsx  mission.ts  params.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: ConfigPanel.tsx  MapContextMenu.tsx  MapPanel.tsx  MissionMap.tsx  MissionPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  TopBar.tsx
src/components/hud/: HudPanel.tsx  TapeGauge.tsx
src/components/ui/: progress.tsx
src/hooks/: use-mission.ts  use-params.ts  use-settings.ts  use-vehicle.ts
