[package]
name = "mavkit"
version = "0.1.0"
edition = "2021"

[features]
default = ["udp", "serial", "ardupilot"]
udp = ["mavlink/udp"]
tcp = ["mavlink/tcp"]
serial = ["mavlink/direct-serial"]
ardupilot = []

[dependencies]
mavlink = { version = "0.17", features = ["tokio-1", "emit-extensions"] }
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
thiserror = "2"
num-traits = "0.2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
