[package]
name = "missionplanner_desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
mp-mission-core = { path = "../../../crates/mp-mission-core" }
mp-telemetry-core = { path = "../../../crates/mp-telemetry-core" }
tauri = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
